<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/grey_200"
    android:orientation="vertical">

    <TextView
        android:id="@+id/getStarted"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:padding="20dp"
        android:text="@string/welcome"
        android:textAllCaps="true"
        android:textAppearance="@style/Base.TextAppearance.AppCompat.Headline"
        android:textColor="@android:color/holo_red_dark"
        android:textSize="28sp" />

    <TextView
        android:id="@+id/info"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/getStarted"
        android:layout_margin="12dp"
        android:text="@string/speaker"
        android:textSize="24sp" />

    <EditText
        android:id="@+id/secret_code"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/info"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="32dp"
        android:hint="Enter Access Code" />

    <Button
        android:id="@+id/enter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/secret_code"
        android:layout_centerHorizontal="true"
        android:layout_margin="28dp"
        android:text="Enter" />

    <ImageButton
        android:id="@+id/image_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/enter"
        android:src="@drawable/logo_2" />

    <ImageView
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_below="@+id/enter"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="46dp"
        android:src="@android:drawable/ic_media_play"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:text="@string/advertise"
        android:textColor="@color/light_blue_500"
        android:textSize="16sp" />
</RelativeLayout>